--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-lib_deps = knolleary/PubSubClient @ ^2.8
+upload_port = COM3
+lib_deps = knolleary/PubSubClient @ ^2.8, bblanchon/ArduinoJson @ ^6.18.5
